--- a/autoredpackhelper/src/main/AndroidManifest.xml
+++ b/autoredpackhelper/src/main/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.xiaoxian.autoredpackhelper">
+          xmlns:tools="http://schemas.android.com/tools" package="com.example.xiaoxian.autoredpackhelper">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".WXRedPackActivity">
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -16,6 +18,23 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <service android:name=".WXRedPackService"
+                 android:enabled="true"
+                 android:exported="true"
+                 android:label="微信抢红包"
+                 android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <!--此处必须声明一次权限-->
+
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/wx_red_pack" />
+            <!--指定配置文件的名字和位置-->
+        </service>
     </application>
 
 </manifest>
